# kafka-tester-cpp

./: .gitignore  CMakeLists.txt  KafkaConsumer.cpp  KafkaProducer.cpp  README.md  WebSocketServer.cpp  WebSocketServer.hpp  build.sh  docker-compose.yml  kafka_consumer.cpp  kafka_producer.cpp  message.avsc
